fix: contact email

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Hi!</h1>
+  <p>Contact me here: <a href="mailto:igorliutcanov@gmail.com">igorliutcanov@gmail.com</a></p>
 </body>
 </html>
